[package]
name = "avdeepfake1m"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "avdeepfake1m"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
pyo3 = { version = "0.21.0", features = ["extension-module"] }
ndarray = { version = "0.15.0", features = ["blas", "rayon", "serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
rayon = "1.10.0"
simd-json = "0.13.9"
serde-ndim = { version = "1.1.0", features = ["ndarray"] }
